--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 target = "x86_64-unknown-linux-musl"
 
 [target.'cfg(target_os = "linux")']
-rustflags = ["-C", "linker=ld.lld", "-C", "relocation-model=static", "-C", "strip=symbols"]
+rustflags = ["-C", "linker=ld.lld", "-C", "relocation-model=static"]
 
 [dependencies]
 tokio = { version = "1.19.2" , features = ["rt", "rt-multi-thread", "macros", "net"]}
