--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ simple-logger = { git = "https://github.com/manglemix/simple_logger.git" }
 regex = "1.6.0"
 clap = "4.0.22"
 gitignore = "1.0.7"
+pandoc = "0.8"
