--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ mangle-detached-console = { git = "https://github.com/manglemix/mangle_detached_
 mangle-rust-utils = { git = "https://github.com/manglemix/mangle_rust_utils.git" }
 rand = { version = "0.8.5" , features = ["std_rng"] }
 rust-argon2 = "1.0.0"
-rocket = { version = "0.5.0-rc.2" , features = ["tls", "json"]}
+rocket = { version = "0.5.0-rc.2" , features = ["json"]}
 # async-trait = "0.1.56"
 # simple-serde = { git = "https://github.com/manglemix/simple_serde.git" , features = ["text", "bin"]}
 rocket_async_compression = "0.1.1"
