--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,9 @@ regex = "1.6.0"
 clap = "4.0.22"
 once_cell = "1.16.0"
 rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
+bimap = "0.6.2"
+tokio-tungstenite = "0.18.0"
+
+[dependencies.rocket_db_pools]
+version = "0.1.0-rc.2"
+features = ["sqlx_sqlite"]
