--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ clap = "4.0.22"
 once_cell = "1.16.0"
 rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
 bimap = "0.6.2"
-tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
+# tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
+tokio-tungstenite = "0.18.0"
 # webrtc-unreliable = "0.5.3"
 rustrict = "0.5.5"
 
